[package]
name = "aoc-2017-rust"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
itertools = "0.10"
regex = "1"
num = "0.4"
evalexpr = "8.1"
